{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 37,
  "lineage": "1078d131-55ed-6f68-914c-2793a91b9b34",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed7b8ab6b50ced7c",
            "domain": "vpc",
            "id": "eipalloc-0ed7b8ab6b50ced7c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-148-31-25.us-east-2.compute.amazonaws.com",
            "public_ip": "3.148.31.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2a"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2601a577e5fd5d2",
            "domain": "vpc",
            "id": "eipalloc-0b2601a577e5fd5d2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-220-3-126.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.3.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2b"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0522725b264e03057",
            "domain": "vpc",
            "id": "eipalloc-0522725b264e03057",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-18-213.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.18.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2c"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed7b8ab6b50ced7c",
            "association_id": "eipassoc-0a6727783e4f3d794",
            "connectivity_type": "public",
            "id": "nat-0d2cc3c4c43ede124",
            "network_interface_id": "eni-082be78bebb7fbb8f",
            "private_ip": "10.0.6.95",
            "public_ip": "3.148.31.25",
            "subnet_id": "subnet-0e3ebb19a9a405de2",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2a"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2a"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2601a577e5fd5d2",
            "association_id": "eipassoc-0b3e72d2a3afc11e5",
            "connectivity_type": "public",
            "id": "nat-0c8ab1e48acae7665",
            "network_interface_id": "eni-0c732dfb792ea33a9",
            "private_ip": "10.0.9.3",
            "public_ip": "18.220.3.126",
            "subnet_id": "subnet-09c167a37392c74ea",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2b"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2b"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0522725b264e03057",
            "association_id": "eipassoc-0da35efc58b9db47b",
            "connectivity_type": "public",
            "id": "nat-00ec84992b4b34c29",
            "network_interface_id": "eni-082f38feafca5698f",
            "private_ip": "10.0.11.47",
            "public_ip": "3.17.18.213",
            "subnet_id": "subnet-016235cc271d3bea7",
            "tags": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2c"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nava-gost-prod-nat-use2c"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:network-acl/acl-05a43257dea868a54",
            "egress": [],
            "id": "acl-05a43257dea868a54",
            "ingress": [],
            "owner_id": "588738567097",
            "subnet_ids": [
              "subnet-0798428755e80ae84",
              "subnet-08ac54ba1e3b5f57a",
              "subnet-08c7691b168352096"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:network-acl/acl-0e454a0ea12f15d0d",
            "egress": [],
            "id": "acl-0e454a0ea12f15d0d",
            "ingress": [],
            "owner_id": "588738567097",
            "subnet_ids": [
              "subnet-016235cc271d3bea7",
              "subnet-09c167a37392c74ea",
              "subnet-0e3ebb19a9a405de2"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1393057702",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a43257dea868a54",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1681444127",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05a43257dea868a54",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2016838814",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e454a0ea12f15d0d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1276201818",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e454a0ea12f15d0d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0785b14da18f105591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d2cc3c4c43ede124",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0785b14da18f10559",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03294392385784deb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8ab1e48acae7665",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03294392385784deb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb42faca926f6b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ec84992b4b34c29",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb42faca926f6b71",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": "10m",
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e7c40c0d2edf87ce",
            "id": "r-rtb-035a7f670099cbd711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035a7f670099cbd71",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:route-table/rtb-0785b14da18f10559",
            "id": "rtb-0785b14da18f10559",
            "owner_id": "588738567097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2a"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:route-table/rtb-03294392385784deb",
            "id": "rtb-03294392385784deb",
            "owner_id": "588738567097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2b"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:route-table/rtb-0bb42faca926f6b71",
            "id": "rtb-0bb42faca926f6b71",
            "owner_id": "588738567097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2c"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:route-table/rtb-035a7f670099cbd71",
            "id": "rtb-035a7f670099cbd71",
            "owner_id": "588738567097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bca6cc998f0e515e",
            "route_table_id": "rtb-0785b14da18f10559",
            "subnet_id": "subnet-08c7691b168352096"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050e682995594d918",
            "route_table_id": "rtb-03294392385784deb",
            "subnet_id": "subnet-08ac54ba1e3b5f57a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012721a268098d906",
            "route_table_id": "rtb-0bb42faca926f6b71",
            "subnet_id": "subnet-0798428755e80ae84"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054abb7bbf9b1151d",
            "route_table_id": "rtb-035a7f670099cbd71",
            "subnet_id": "subnet-0e3ebb19a9a405de2"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ed7817a9ac2fe65",
            "route_table_id": "rtb-035a7f670099cbd71",
            "subnet_id": "subnet-09c167a37392c74ea"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07478e429e1ddbb6e",
            "route_table_id": "rtb-035a7f670099cbd71",
            "subnet_id": "subnet-016235cc271d3bea7"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-08c7691b168352096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c7691b168352096",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2a"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2a"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-08ac54ba1e3b5f57a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ac54ba1e3b5f57a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2b"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2b"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-0798428755e80ae84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0798428755e80ae84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2c"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "nava-gost-prod-private-use2c"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-0e3ebb19a9a405de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.6.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3ebb19a9a405de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2a"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2a"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-09c167a37392c74ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c167a37392c74ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2b"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2b"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:subnet/subnet-016235cc271d3bea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016235cc271d3bea7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738567097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2c"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "nava-gost-prod-public-use2c"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:network-acl/acl-0cf115d7182f9b8fc",
            "default_network_acl_id": "acl-0cf115d7182f9b8fc",
            "egress": [],
            "id": "acl-0cf115d7182f9b8fc",
            "ingress": [],
            "owner_id": "588738567097",
            "subnet_ids": [
              "subnet-016235cc271d3bea7",
              "subnet-0798428755e80ae84",
              "subnet-08ac54ba1e3b5f57a",
              "subnet-08c7691b168352096",
              "subnet-09c167a37392c74ea"
            ],
            "tags": {
              "Name": "nava-gost-prod-default"
            },
            "tags_all": {
              "Name": "nava-gost-prod-default"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:security-group/sg-0f5c9cf0a48d93117",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f5c9cf0a48d93117",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "588738567097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nava-gost-prod-default"
            },
            "tags_all": {
              "Name": "nava-gost-prod-default"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:internet-gateway/igw-0e7c40c0d2edf87ce",
            "id": "igw-0e7c40c0d2edf87ce",
            "owner_id": "588738567097",
            "tags": {
              "Name": "nava-gost-prod"
            },
            "tags_all": {
              "Name": "nava-gost-prod"
            },
            "vpc_id": "vpc-0e9e6654d9fe101c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:588738567097:vpc/vpc-0e9e6654d9fe101c1",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf115d7182f9b8fc",
            "default_route_table_id": "rtb-057d739288ac77dc8",
            "default_security_group_id": "sg-0f5c9cf0a48d93117",
            "dhcp_options_id": "dopt-0d51f70262a5da3c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9e6654d9fe101c1",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0f1ad804d3ee2c979",
            "ipv6_cidr_block": "2600:1f16:1470:cf00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057d739288ac77dc8",
            "owner_id": "588738567097",
            "tags": {
              "Name": "nava-gost-prod"
            },
            "tags_all": {
              "Name": "nava-gost-prod"
            }
          }
        }
      ]
    }
  ]
}